package org.exercice.models.building;

public interface Building {
    void build();
    String getDescription();
}
