package org.exercice.models.ressources;

public interface RessourceChoix {
}
