package org.exercice.models.unite.interfaces;

import org.exercice.models.lieu.LieuChoix;

public interface PeutAllerDansVillage extends LieuChoix {
}
