package org.exercice.models.unite.interfaces;

public interface PeutCollecterDuFer {
}
